# Atlas

./: .gitignore  app.py  db.py  leaderboard.py  lobby.py  match.py  ow_info.py  parser_tools.py  playerqueue.py  pyproject.toml  queue.py  readme.md  requirements.txt  team.py  teamqueue.py  user.py  websocket_handler.py
log_folder/: 04-19 Beta Test 2 Game 2.txt  04-19 Beta Test 2 Game 3.txt  04-19 Beta Test 2 Game 4.txt  04-20 Beta Test 3 Game 1.txt  04-20 Beta Test 3 Game 2.txt  04-20 Beta Test 3 Game 3.txt  04-20 Beta Test 3 Game 4.txt  04-20 Beta Test 3 Game 5.txt  04-21 Beta Test 4 Game 1.txt  04-21 Beta Test 4 Game 2.txt  04-22 Beta Test 5 Game 1.txt  04-22 Beta Test 5 Game 3.txt  04-23 Alpha Test 6 Game 1.txt  04-23 Alpha Test 6 Game 2.txt  04-23 Alpha Test 6 Game 3.txt  04-24 Alpha Test 7 Game 1.txt  04-24 Alpha Test 7 Game 2.txt  04-24 Alpha Test 7 Game 3.txt  04-24 Alpha Test 7 Game 4.txt  04-25 Alpha Test 8 Game 1.txt  04-25 Alpha Test 8 Game 2.txt  04-25 Alpha Test 8 Game 3.txt  04-25 Alpha Test 8 Game 4.txt  04-25 Alpha Test 8 Game 5.txt  FAKEGAME.txt  Log-2022-04-19-18-46-35.txt
static/styles/: main.css
templates/: log.html  match_player_hero_stats.html  nokey.html  signup.html  upload_log.html  user.html  view_games.html
