[tool.poetry]
name = "Gauntlet"
version = "0.1.0"
description = ""
authors = ["KATTE"]
license = "GPL"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.1"
pymongo = "^4.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
